# openapi-rust-elm

./: Cargo.toml  README.md  openapi.json  package.json
src/: main.rs
src/Codegen/: Api.elm  Json.elm  Types.elm
