[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
serde = "1.0.219"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["cors"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
